@startuml simple-erd-backend
title ERD đơn giản - Hệ thống thu mua phế liệu

left to right direction
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide methods

entity users {
  * id : BIGINT <<PK>>
  --
  full_name : VARCHAR(100)
  phone : VARCHAR(15)
  role : INT
  status : INT
}

entity scrap_categories {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(100)
  unit : VARCHAR(20)
  base_price : DECIMAL
}

entity scrap_products {
  * id : BIGINT <<PK>>
  --
  category_id : BIGINT <<FK>>
  name : VARCHAR(200)
  price : DOUBLE
  unit : VARCHAR(20)
}

entity orders {
  * id : BIGINT <<PK>>
  --
  seller_id : BIGINT <<FK>>
  matched_driver_id : BIGINT <<FK>>
  category_id : BIGINT <<FK>>
  order_code : VARCHAR(20)
  estimated_weight : DOUBLE
  final_price : DOUBLE
  status : ENUM
  pickup_time : DATETIME
}

entity order_items {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  category_id : BIGINT <<FK>>
  weight : DOUBLE
}

entity order_applications {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  driver_id : BIGINT <<FK>>
  distance_km : DOUBLE
  status : ENUM
}

entity transactions {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  amount : DOUBLE
  payment_method : VARCHAR(50)
  status : ENUM
}

entity reviews {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  reviewer_id : BIGINT <<FK>>
  reviewed_id : BIGINT <<FK>>
  rating : INT
}

entity notifications {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  order_id : BIGINT <<FK>>
  title : VARCHAR(255)
  is_read : BIT
}

scrap_categories ||--o{ scrap_products : contains
scrap_categories ||--o{ orders : selected
scrap_categories ||--o{ order_items : includes

users ||--o{ orders : creates
users ||--o{ orders : receives
users ||--o{ order_applications : applies
users ||--o{ reviews : writes
users ||--o{ reviews : receives
users ||--o{ notifications : receives

orders ||--o{ order_items : has
orders ||--o{ order_applications : has
orders ||--o{ transactions : pays
orders ||--o{ reviews : has
orders ||--o{ notifications : notifies

@enduml
